add weight unit setting in settings

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -94,5 +94,10 @@
   "language": "Language",
   "@language": {
     "description": "Language setting"
+  },
+
+  "weightUnit": "Weight Unit",
+  "@weightUnit": {
+    "description": "Weight unit setting"
   }
 }
